# infrapilot

./: .dockerignore  .gitignore  README.md
agent/: Dockerfile  README.md  pyproject.toml  requirements.txt
agent/evals/: run_evals.py  scenarios.yaml
agent/infrapilot/: __init__.py  __main__.py  agent.py  config.py  k8s.py  prometheus.py  tools.py
ansible/: 01-host-vfio.yml  02-gpu-node-driver.yml  ansible.cfg  inventory.ini  join-gpu-worker.ini
docs/: 00-overview.md  01-gpu-enablement.md  02-workloads.md  03-observability.md  04-gitops.md  05-agent.md
kubernetes/agent/: configmap.yaml  cronjob.yaml  kustomization.yaml  rbac.yaml  secret.example.yaml
kubernetes/argocd/: root-app.yaml
kubernetes/argocd/apps/: agent.yaml  gpu-operator-config.yaml  gpu-operator.yaml  observability-extras.yaml  observability.yaml  ollama.yaml
kubernetes/gpu-operator/: time-slicing-config.yaml  values.yaml
kubernetes/observability/: dcgm-servicemonitor.yaml  grafana-dashboard-gpu.yaml  values.yaml
kubernetes/ollama/: ingress.yaml  kustomization.yaml  namespace.yaml  ollama.yaml  open-webui.yaml
terraform/: gpu-worker.tf  provider.tf  terraform.tfvars.example  variables.tf
